@@ -21,7 +21,7 @@ RNAseqdata(file, backgrounddose, check = TRUE, transfo.method = c("rlog", "vst")
           transfo.blind = TRUE, round.counts = FALSE)
 
 \method{print}{RNAseqdata}(x, \dots)
-\method{plot}{RNAseqdata}(x, \dots)
+\method{plot}{RNAseqdata}(x, range4boxplot = 1e6, \dots)
 }
 
 \arguments{
@@ -60,6 +60,9 @@ using the
 
 \item{x}{An object of class \code{"RNAseqdata"}.}
 
+\item{range4boxplot}{An argument passed to boxplot(), fixed by default at 1e6 
+to prevent the producing of very large plot files due to many outliers. 
+Can be put at 1.5 to obtain more classical boxplots.}
 
 \item{\dots}{ further arguments passed to print or plot functions.}
 }
@@ -134,7 +137,7 @@ Marie-Laure Delignette-Muller
 #
 datafilename <- system.file("extdata", "RNAseq_sample.txt", package="DRomics")
 (o <- RNAseqdata(datafilename, check = TRUE, transfo.method = "vst"))
-plot(o, range = 1e6)
+plot(o)
 
 # If you want to use your own data set just replace datafilename, 
 # the first argument of RNAseqdata(), 
@@ -151,7 +154,7 @@ plot(o, range = 1e6)
 data(Zhou_kidney_pce)
 subsample <- Zhou_kidney_pce[1:1000, ]
 (o <- RNAseqdata(subsample, check = TRUE, transfo.method = "vst"))
-plot(o, range = 1e6)
+plot(o)
 PCAdataplot(o)
 
 
